# calling_app

./: README.md  alembic.ini
auth_service/: config.py  main.py  pyproject.toml
auth_service/crud/: user_crud.py
auth_service/db/: base.py  initial_tables.py  session.py
auth_service/db/models/: user.py
auth_service/routes/: auth.py
auth_service/schemas/: token.py  user.py  user_auth.py
auth_service/services/: jwt.py  security.py
program_service/: config.py  main.py
program_service/crud/: program_crud.py
program_service/db/: init_tables.py
program_service/db/models/: program.py
program_service/routes/: program.py
program_service/schemas/: program.py
